@@ -34,4 +34,11 @@ public class TestAssociationsFacetsExample extends LuceneTestCase {
     assertEquals("dim=tags path=[] value=-1 childCount=2\n  lucene (4)\n  solr (2)\n", res.get(0).toString());
     assertEquals("dim=genre path=[] value=-1.0 childCount=2\n  computing (1.62)\n  software (0.34)\n", res.get(1).toString());
   }  
+
+  @Test
+  public void testDrillDown() throws Exception {
+    FacetResult result = new AssociationsFacetsExample().runDrillDown();
+    assertEquals("dim=genre path=[] value=-1.0 childCount=2\n  computing (0.75)\n  software (0.34)\n", result.toString());
+  }
+  
 }
